--- a/app/pages/welcome/welcome.html
+++ b/app/pages/welcome/welcome.html
@@ -10,7 +10,7 @@
     <ion-slides pager loop="false" autoplay="false" index="1">
 
         <ion-slide style="background-image: url('images/gloved_hands@2x.jpg')">
-            <p>Your dream house is just a few taps away! Select Properties in the menu to start your search.</p>
+            <p>Archrock Field Unit Manager. Select a Unit in the menu to proceed.</p>
         </ion-slide>
 
         <ion-slide style="background-image: url('images/slide_brokers.jpg')">
