--- a/app/app.html
+++ b/app/app.html
@@ -1,32 +1,15 @@
 <ion-menu [content]="content">
 
-  <img src="images/logo.png" style="width: 100px;margin-left:84px"/>
+  <img src="archrock_logo_med@2x.png" style="width: 100px;margin-left:84px"/>
 
   <ion-content>
     <ion-list>
-      <ion-list-header>Home Search</ion-list-header>
+      <ion-list-header>Unit Search</ion-list-header>
       <button menuClose ion-item *ngFor="let p of pages" (click)="openPage(p)">
         <ion-icon item-left name="{{p.icon}}"></ion-icon>
         {{p.title}}
       </button>
-      <ion-list-header>Mortgage</ion-list-header>
-      <button menuClose ion-item >
-        <ion-icon item-left name="checkbox"></ion-icon>
-        Get Pre-Approved
-      </button>
-      <button menuClose ion-item >
-        <ion-icon item-left name="cart"></ion-icon>
-        Shop Rates
-      </button>
-      <ion-list-header>Account</ion-list-header>
-      <button menuClose ion-item >
-        <ion-icon item-left name="person"></ion-icon>
-        Profile
-      </button>
-      <button menuClose ion-item >
-        <ion-icon item-left name="settings"></ion-icon>
-        Settings
-      </button>
+     
     </ion-list>
   </ion-content>
 
